.gitignore file cleaned and fixed. Rework system arduino port selection based on suggestions.

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
 *.pyc
-Lib\*
-Scripts\*
-__pycache__\*
-Include\*
-*.dll
-*.pyd
-*.exe
-pyvenv.cfg
-*.bat
-Scripts/f2py.py
-Scripts/miniterm.py
-Lib/site-packages/wxPython-4.0.2a1.dev3717+d4bd2fe.dist-info/WHEEL
-Lib/site-packages/wxPython-4.0.2a1.dev3717+d4bd2fe.dist-info/RECORD
-Lib/tcl8.6/init.tcl
-Scripts/Activate.ps1
-Lib/site-packages/wx/xrc.pyi
+Lib/**
+Scripts/**
+__pycache__/**
+Include/**
